--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,14 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: Arial, Helvetica, sans-serif;
   color: #777777;
 }
 header {
   background-color: blueviolet;
+  font-family: Georgia, "Times New Roman", Times, serif;
 }
 nav {
   background-color: #ffffff;
@@ -26,14 +31,15 @@ nav {
   color: #ffffff;
   padding: 1%;
   margin-bottom: 0%;
-  margin-left: 17%;
+  margin-left: 15%;
+  font-family: Georgia, "Times New Roman", Times, serif;
 }
 #mainback {
   clear: both;
   background-image: url("../images/hotel-wallpaper.png");
   padding: 3%;
-  width: 1320px;
-  height: 600px;
+  width: 100%;
+  height: 650px;
   margin-left: auto;
   margin-right: auto;
   border-top: 1px solid #eeeeee;
@@ -41,15 +47,17 @@ nav {
 #mainsection {
   background-color: #ffffff;
   width: 960px;
-  height: 550px;
+  height: 500px;
   margin-left: auto;
   margin-right: auto;
   border: 1px solid #dddddd;
+  padding: 1%;
 }
 h2 {
   color: #4aaaa5;
   padding: 1%;
   margin-left: 1%;
+  font-family: Georgia, "Times New Roman", Times, serif;
 }
 #content {
   padding: 2%;
@@ -57,16 +65,25 @@ h2 {
 img {
   width: 20%;
   height: 20%;
+  float: left;
 }
 p {
+  width: 70%;
+  float: left;
+  margin-left: 1%;
 }
 
 footer {
+  clear: both;
   border-top: 8px solid #4aaaa5;
   text-align: center;
   background-color: #666666;
   color: #ffffff;
   padding: 1%;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
 }
 #cop {
   margin-bottom: 0%;
