--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -3,8 +3,9 @@ form {
 }
 .sing {
   width: 95%;
-  height: 20px;
+  height: 30px;
   margin-bottom: 1%;
+  border: 1px solid #777777;
 }
 #mes {
   width: 95%;
