--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,6 @@ body {
   color: #777777;
 }
 header {
-  background-color: blueviolet;
   font-family: Georgia, "Times New Roman", Times, serif;
 }
 nav {
@@ -71,6 +70,7 @@ p {
   width: 70%;
   float: left;
   margin-left: 1%;
+  font-size: 12pt;
 }
 
 footer {
