--- a/assets/css/port.css
+++ b/assets/css/port.css
@@ -3,6 +3,11 @@
   height: 30%;
   margin-bottom: 0%;
 }
+
+img {
+  width: 100%;
+  height: 100%;
+}
 .tile {
   width: 30%;
   height: 70%;
@@ -10,30 +15,13 @@
   margin-right: 3%;
   margin-top: 0%;
 }
-
-#c1 {
-  background-image: url("../images/waterfall.jpg");
-  image-rendering: auto;
-}
-#c2 {
-  background-image: url("../images/clifside.jpg");
-}
-#c3 {
-  background-image: url("../images/jellyfish.jpg");
-}
-#c4 {
-  background-image: url("../images/waterwayjpg.jpg");
-}
-#c5 {
-  background-image: url("../images/rainbow.jpg");
-}
 .title {
+  clear: both;
   background-color: #4aaaa5;
+  width: 168px;
+  max-height: 30px;
+  position: absolute;
+  margin-top: 7.5%;
   color: #ffffff;
   text-align: center;
-  padding: 4px;
-  width: 168px;
-  margin-left: 0%;
-  margin-right: 0%;
-  margin-top: 25%;
 }
