--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,12 +5,15 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
   color: #777777;
+  background-image: url("../images/hotel-wallpaper.png");
 }
 header {
   font-family: Georgia, "Times New Roman", Times, serif;
 }
 nav {
   background-color: #ffffff;
+  width: 100%;
+  height: 50px;
 }
 #topnav {
   float: right;
@@ -35,7 +38,7 @@ nav {
 }
 #mainback {
   clear: both;
-  background-image: url("../images/hotel-wallpaper.png");
+  /* background-image: url("../images/hotel-wallpaper.png"); */
   padding: 3%;
   width: 100%;
   height: 650px;
