Fixed header and tile placement

--- a/assets/css/port.css
+++ b/assets/css/port.css
@@ -21,7 +21,7 @@ img {
   width: 168px;
   max-height: 30px;
   position: absolute;
-  margin-top: 7.5%;
+  margin-top: 75px;
   color: #ffffff;
   text-align: center;
 }
