--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   color: #777777;
   background-image: url("../images/hotel-wallpaper.png");
+  margin: 0%;
 }
 header {
   font-family: Georgia, "Times New Roman", Times, serif;
@@ -13,7 +14,7 @@ header {
 nav {
   background-color: #ffffff;
   width: 100%;
-  height: 50px;
+  height: 100px;
 }
 #topnav {
   float: right;
@@ -33,7 +34,7 @@ nav {
   color: #ffffff;
   padding: 1%;
   margin-bottom: 0%;
-  margin-left: 16.5%;
+  margin-left: 480px;
   font-family: Georgia, "Times New Roman", Times, serif;
 }
 #mainback {
